--- a/notebook/CeQuilFautDeScalaPourSpark.ipynb
+++ b/notebook/CeQuilFautDeScalaPourSpark.ipynb
@@ -47,7 +47,7 @@
     "\n",
     "Dean Wampler, Ph.D. [@deanwampler](http://twitter.com/deanwampler) ([email](mailto:deanwampler@gmail.com))\n",
     "\n",
-    "Bienvenue. Ce notebook vous enseigne les principes fondamentaux de [Scala](http://scala-lang.org) nécessaires à l'utilisation de l'API Scala d'[Apache Spark](http://spark.apache.org). Spark utilise les meilleures features de Scala et évite d'utiliser celles qui sont plus difficiles et obscures. "
+    "Bienvenue. Ce notebook vous enseigne les principes fondamentaux de [Scala](http://scala-lang.org) nécessaires à l'utilisation de l'API Scala d'[Apache Spark](http://spark.apache.org). Spark utilise les meilleures fonctionnalités de Scala et évite d'utiliser celles qui sont plus difficiles et obscures."
    ]
   },
   {
@@ -3514,27 +3514,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# \"Scala for Spark 102\"\n",
-    "We've covered a lot already in this notebook, focusing on the most important topics you need to know about Scala for daily use. Let's call them the \"Scala for Spark 101\" material.\n",
+    "# \"Scala pour Spark avancé\"\n",
+    "Nous avons déjà abordé beaucoup de choses dans ce notebook, en se concentrant sur les sujets essentiels que vous devez savoir de Scala pour un usage quotidien. Appelons ces choses \"Scala pour Spark débutant\".\n",
     "\n",
-    "At this point, I suggest you create a new notebook and play with Spark using what you've learned so far, then come back to this point if you run into something we didn't cover already. Chances are you're ready to learn the next bits of useful Scala, the \"102\" material."
+    "Dès maintenant, nous vous conseillons de créer un nouveau notebook et de jouer avec Spark en utilisant ce que vous avez appris jusqu'à maintenant et de revenir ici si vous tombez sur quelque chose qui n'a pas été encore abordé jusque là. Il y a une chance pour que ce que vous devez savoir se trouve dans la partie qui suit."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Importing Everything in a Package\n",
-    "In Java, `import foo.bar.*;` means import everything in the `bar` package.\n",
+    "### Tout importer dans un package\n",
+    "En Java, `import foo.bar.*;` signifie que nous allons tout importer du package `bar`.\n",
     "\n",
-    "In Scala, `*` is actually a legal method name; think of defining multiplication for custom numeric types, like `Matrix`. Hence, this import statement in Scala would be ambigious. Therefore, Scala uses `_` instead of `*`, `import foo.bar._` (with the semicolon inferred)."
+    "En Scala, `*` est en fait un nom de méthode légal; par exemple lorsque vous définissez multiplication pour un type numérique crée comme `Matrix`. Ainsi un import avec une `*` serait ambigu. Scala utilise donc `_` au lieu de `*`, `import foo.bar._` (avec le point-virgule qui est inféré)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Incidentally, what would that `*` method definition look like? Something like this:\n",
+    "À quoi ressemblerait la définition de la méthode `*` ? Elle ressemblerait à quelque chose comme :\n",
     "\n",
     "```scala\n",
     "case class Matrix(rows: Array[Array[Double]]) {  // Each row is an Array[Double]\n",
@@ -3561,16 +3561,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Operator Syntax\n",
+    "### Syntaxe des opérateurs\n",
     "\n",
-    "Wait!! What's this `m1 * m2` stuff?? Shouldn't it be `m1.*(m2)`. It would be really convenient to use \"operator syntax\", more precisely called _infix operator notation_ for many methods like `*` and `+` here. The Scala parser supports this with a simple relaxation of the rules; when a method takes a single argument, you can omit the period `.` and parentheses `(...)`. Hence the following really is equivalent:\n",
+    "Une seconde ! Que signifie `m1 * m2` ? Ne devrait-ce pas être `m1.*(m2)` ? Cela serait vraiment pratique pour utiliser la \"syntaxe opérateur\", plus précisément appelé la _notation d'opérateur infixe_ pour des méthodes diverses comme `*` et `+` ici. Le parser Scala supporte cela avec un simple relâchement des règles; quand une méthode prend en paramètre un argument unique, alors vous pouvez omettre le point `.` et les parenthèses `(...)`. Ces deux lignes sont équivalentes :\n",
     "\n",
     "```scala\n",
     "val m1_times_m2 = m1.*(m2)\n",
     "val m1_times_m2 = m1 * m2\n",
     "```\n",
     "\n",
-    "This convenience can lead to confusing code, especially for beginners to Scala, so use it cautiously."
+    "Cela peut amener à du code confus, particulièrement pour les débutants à Scala, utilisez la donc avec précaution."
    ]
   },
   {
@@ -3578,8 +3578,10 @@
    "metadata": {},
    "source": [
     "### Traits\n",
-    "_Traits_ are similar to Java 8 _interfaces_, used to define abstractions, but with the ability to provide \"default\" implementations of the methods declared. Unlike Java 8 interfaces, traits can also have fields representing \"state\" information about instances. There is a blury line between traits and _abstract classes_, again where some member methods or fields are not defined. In both cases, a subtype of a trait and/or an abstract class must define any undefined members if you want to construct instances of it.\n",
+    "Les _traits_ sont similaires aux _interfaces_ Java 8, utilisés pour définir des abstractions, mais avec la possibilité de fournir des implémentations par \"défaut\" des méthodes déclarées. Contrairement aux interfaces de Java 8, les traits peuvent aussi avoir des champs qui représentes \"l'était\" de l'information à propos des instances. Il y a une ligne fine entre les _traits_ et les _classes abstraites_, là encore avec des méthodes membres ou champs ne sont pas défini.\n",
+    "Dans les deux cas, les sous-types de trait et/ou d'une classe abstraite doivent définir tous les membres non définis si vous voulez pouvoir construire des instances de celles-ci.\n",
     "\n",
+    "Pouruqoi avoir traits et classes abstraites ? C'est parce que Java ne permet _qu'un seul héritage_; ile ne peut y avoir qu'un type _parent_, qio est normalement utilisé là où vous voudriez utiliser une classe abstraite, mais Scala vous permet de \"mixer\" des traits (ou d'utiliser un trait comme la classe parente - assez confus). Un bon exemple de trait \"mélangé\" est celui qui implémente le logging. Tous les \"services\" peuvent \n",
     "So, why have both traits and abstract classes? It's because Java only allows _single inheritance_; there can be only one _parent_ type, which is normally where you would use an abstract class, but Scala lets you \"mix in\" one or more additional traits (or use a trait as the parent class - yes, confusing). A great example \"mix in\" trait is one that implements logging. Any \"service\" type can mix in the logging trait to get \"instant\" access to this reusable functionality. Schematically, it looks like the following:\n",
     "\n",
     "```scala\n",
@@ -3604,18 +3606,25 @@
     "}\n",
     "```\n",
     "\n",
-    "`Unit` is Scala's equivalent to Java's `void`. It actually is a true type with a single return value, unlike `void`, but we use it in the same sense of \"nothing useful will be returned\"."
+    "`Unit` en Scala est l'équivalent Java de `void`. C'est un vrai type avec une valeur de retour unique contrairement à `void`, et nous l'utilisons dans le sens \"rien d'utile va être retourné\"."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ranges\n",
-    "What if you want some numbers between a start and end value? Use a [Range](http://www.scala-lang.org/api/current/index.html#scala.collection.immutable.Range), which has a nice literal syntax, e.g., `1 until 100`, `2 to 200 by 3`. \n",
+    "### Intervalles\n",
+    "Et si vous vouliez des nombres entre une valeur de départ et de fin ? Utilisez un [Range](http://www.scala-lang.org/api/current/index.html#scala.collection.immutable.Range), qui possède une syntaxe littérale `1 until 100`, `2 to 200 by 3`. \n",
     "\n",
-    "The `Range` always includes the lower bound. Using `to` in a `Range` makes it _inclusive_ at the upper bound. Using `until` makes it _exclusive_ at the upper bound. Use `by` to specify a delta, which defaults to `1`."
+    "`Range` comprend toujours la borne inférieure. Utiliser `to` dans `Range` fait en sorte que la borne supérieure soit _incluse_. Utiliser `until` le rend _exclusif_. Utilisez `by` pour spécifier un delta, qui par défaut est de `1`."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -3681,7 +3690,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When you need a small test data set to play with Spark, ranges can be convenient."
+    "Quand vous avez besoin d'un jeu de données pour jouer avec Spark, les intervalles peuvent être pratique."
    ]
   },
   {
@@ -3734,7 +3743,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[SparkContext](http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.SparkContext) also has a `range` method that effectively does the same thing as `sc.parallelize(some_range)`."
+    "[SparkContext](http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.SparkContext) a aussi une méthode `range` qui fait la même chose que `sc.parallelize(some_range)`."
    ]
   },
   {
