--- a/notebook/CeQuilFautDeScalaPourSpark.ipynb
+++ b/notebook/CeQuilFautDeScalaPourSpark.ipynb
@@ -3749,32 +3749,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Scala Interpreter (REPL) vs. Notebooks vs. Scala Compiler\n",
+    "### Interpréteur Scala (REPL) vs. Notebooks vs. Compilateur Scala\n",
     "<a name=\"REPL\"></a>\n",
-    "This notebook has been using a running Scala interpreter, a.k.a. _REPL_ (\"read, eval, print, loop\") to parse the Scala code. The Spark distribution comes with a `spark-shell` script that also lets you use the interpreter from the command line, but without the nice notebook UI.\n",
+    "Ce notebook est en train d'utiliser un interprèteur Scala, le _REPL_ (\"read, eval, print, loop\") pour parser le code Scala. La distribution Spark est fournie avec un script `spark-shell` qui vous permet aussi d'utiliser l'interpréteur depuis une ligne de commande mais sans la belle interface utilisateur d'un notebook.\n",
     "\n",
-    "If you use `spark-shell`, there are a few other behavior changes you should know about."
+    "Si vous utilisez le `spark-shell`, il y a quelques différences de comportement que vous devez savoir."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Using :paste Mode\n",
-    "By default the Scala interpreter treats _each line_ you enter separately. This can cause surprises compared to how the Scala _compiler_ works, where it treats all the code in the same file in the same context.\n",
+    "#### Utiliser le mode :paste\n",
+    "Par défaut, l'interpréteur Scala traite _chaque ligne_ que vous entrez de manière séparée. Cela peut engendrer des surprises comparé à la manière de fonctionner du _compilateur_ Scala, où le code sera traité dans le même fichier et le même contexte.\n",
     "\n",
-    "For example, the following code, where the expression continues on the second line, is handled successfully by the compiler, but not by the interpreter.\n",
+    "Par exemple, dans le code suivant, l'expression continue sur la seconde ligne, est comprise par le compilateur mais pas par l'interpréteur.\n",
     "\n",
     "```scala\n",
     "(1 to 100)\n",
     ".map(i => i*i)\n",
     "```\n",
     "\n",
-    "the Interpreter thinks it finished parsing the expression when it hit the new line after the literal [Range](http://www.scala-lang.org/api/current/index.html#scala.collection.immutable.Range), `1 to 100`. It then throws an error on the opening `.` on the next line. On the other hand, the compiler keeps compiling, ignoring the new line in this case. \n",
+    "L'interpréteur pense qu'il a fini d'analyser l'expression quand il arrive à une nouvelle ligne après le littéral [Range](http://www.scala-lang.org/api/current/index.html#scala.collection.immutable.Range), `1 to 100`. L'interpréteur lance ensuite une erreur sur le `.` de la ligne suivante. En parallèle, le compilateur continue de compiler et ignore les nouvelles lignes dans ce cas-là.\n",
     "\n",
-    "This notebook also does the same thing as the \"raw\" interpreter, but in some cases, notebooks will use an interpeter command, `:paste` that tells the parser to parse all of the lines that follow together, just like the compiler would parse them, until the \"end of input\", which you indicate with `CTRL-D`. \n",
+    "Ce notebook fait la même chose que l'interpréteur mais dans quelques cas, les notebooks vont utiliser une commande, `:paste` qui indique au parser d'analyser toutes les lignes qui suivent ensemble, comme ce que le compilateur ferait jusqu'à \"end of input\" que vous pouvez indiquer avec `CTRL-D`.\n",
     "\n",
-    "You can't experiment with it through this notebook, but your session would look something like this:\n",
+    "Vous ne pouvez pas l'expérimenter avec ce notebook, mais votre session ressemblerait à quelque chose comme ça :\n",
     "\n",
     "```scala\n",
     "scala> :paste\n",
@@ -3796,23 +3796,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Ambiguities with Companion Objects\n",
-    "<a name=\"Ambiguities\"></a>\n",
-    "As I wrote this notebook, I _wanted_ to demonstrate using the companion object `IIRecord` to define a method explicitly, but this leads to an ambiguity later on in the notebook if you attempt to use this method. The notebook gets confused between the case class and the object. \n",
+    "#### Ambiguïtés avec les objets compagnons\n",
+    "<a name=\"Ambiguïtés\"></a>\n",
+    "Lors de la rédaction de ce notebook, nous _voulions_ démontrer en utilisant l'objet compagnon `IIRecord` de définir une méthode explicitement, mais cela mène à une ambiguïté plus tard dans ce notebook si vous voulez utiliser cette méthode. Le notebook confondra la case class et l'objet.\n",
     "\n",
-    "While unfortunate, it's also true that once you start defining more involved case classes, with more than trivial methods and explicit additions to the default companion object, you should really define these types outside the notebook in a compiled library that you use within the notebook.\n",
+    "C'est regrettable mais il est vrai que lorsque vous commencez à définir des case classes plus complexes, avec plus que des méthodes triviales et des additions explicites à l'objet compagnon par défaut, vous devriez vraiment définir ces types en dehors du notebook dans une librairie compilée que vous pourrez utiliser dans ce notebook.\n",
     "\n",
-    "The details are beyond our scope here, but basically, you set up a project with your Scala code and build it using your favorite build tool. [SBT](http://www.scala-sbt.org/) is a popular choice for Scala, but Maven, Gradle, etc. can be used. \n",
+    "Les détails sont en dehors de notre cadre ici, mais vous pouvez créer un projet avec votre code Scala et le build avec votre outil de build favori. [SBT](http://www.scala-sbt.org/) est un choix populaire pour Scala, mais Maven, Gradle, etc peuvent être utilisés.\n",
     "\n",
-    "You want to generate a _jar_ file with the compiled artifacts, then when you start `spark-shell`, submit a Spark job with `spark-submit` or use a notebook environment like this one, you specify the jar for inclusion. For `spark-shell` and `spark-submit`, invoke it with the `--jars myproject.jar` option. For Toree with Jupyter, see the discussion on the [FAQ page](https://toree.incubator.apache.org/documentation/user/faq.html)."
+    "Vous devez générer un fichier _jar_ avec les artefacts compilés, puis quand vous lancez votre `spark-shell`, soumettez votre job Spark avec un `spark-submit` ou utilisez un environnement de notebook comme celui-ci en spécifiant les jars pour les inclure. Pour `spark-shell` et `spark-submit`, invoquez le avec l'option `--jars myproject.jar`. Pour Toree with Jupyter, regardez la discussion sur [FAQ page](https://toree.incubator.apache.org/documentation/user/faq.html)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Scala's Type Hierarchy\n",
-    "Scala's type hierarchy is similar to Java's, but with some interesting differences."
+    "### Hiérarchie de type Scala\n",
+    "La hiérarchie de type dans Scala est similaire à celle de Java mais avec des différences notables."
    ]
   },
   {
@@ -3826,17 +3826,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In Java, all _reference types_ are descended from [java.lang.Object](https://docs.oracle.com/javase/8/docs/api/java/lang/Object.html). The name _reference type_ reflects the fact that the instances for all these types are allocated on the _heap_ and program variables are references to those heap locations.\n",
+    "En Java, tous les _références de types_ proviennent de [java.lang.Object](https://docs.oracle.com/javase/8/docs/api/java/lang/Object.html). Le nom _référence de type_ reflète le fait que les instances de tous ces types sont alloués sur le _heap_ et que les variables du programmes sont des références à ces heap.\n",
     "\n",
-    "The primitives types, `int`, `long`, etc. are not considered part of the type hierarchy and are treated specially. This is in part a performance optimization, as instances of these types fit in CPU registers and the values are pushed onto stack frames. However, they have wrapper or \"boxed\" types, `Integer`, `Long`, etc., that are part of the type hierarchy, which you must use with Java's collections, for example (with the exception of arrays).\n",
+    "Les types primitifs, `int`, `long`, etc ne sont pas considérés comme faisant partie de la hiérarchie de type et sont traités spécialement. C'est en partie pour optimiser les performances car les instances de ces types tiennent dans le registre du processeur et les valeurs sont envoyées dans la pile d'éxécution. Cependant, ces valeurs sont types \"boxed\", par exemple `Interger`, `Long`, etc et font parti de l'hiérarchie de type que vous êtes obligé d'utiliser avec les collections Java par exemple (avec l'exception des tableaux).\n",
     "\n",
-    "Instead, Scala treats the primitives at the code level as basically the same as the reference types. You don't use `new Int(100)` for example, but you can call methods on `Int` instances. The code generated, in most cases, uses the optimized JVM primitives. \n",
+    "Scala traite les primitives au niveau du code comme des types de références. Vous n'utilisez pas `new Int(100)` par exemple, mais vous pouvez appeler des méthodes sur des instances de `Int`. Le code généré utilise en général des primitives de la JVM optimisés.\n",
     "\n",
-    "Hence, the Scala type hierarchy defines a type [Any](http://www.scala-lang.org/api/current/#scala.Any) to be the a parent type of _both_ reference types and \"value\" types (for the primitives). Each of those subhierarchies have parent types, [AnyRef](http://www.scala-lang.org/api/current/#scala.AnyRef) is effectively the same as [java.lang.Object](https://docs.oracle.com/javase/8/docs/api/java/lang/Object.html), and [AnyVal](http://www.scala-lang.org/api/current/#scala.AnyVal) is the parent of the value types.\n",
+    "Ainsi, l'hiérarchie de type Scala définit un type [Any](http://www.scala-lang.org/api/current/#scala.Any) qui est un parent des types de références et des types de valeurs (pour les primitives). Chacun de ces sous-hiérarchies ont des types parent, [AnyRef](http://www.scala-lang.org/api/current/#scala.AnyRef) qui est la même chose que [java.lang.Object](https://docs.oracle.com/javase/8/docs/api/java/lang/Object.html), et [AnyVal](http://www.scala-lang.org/api/current/#scala.AnyVal) est le parent des types de valeur.\n",
     "\n",
-    "Finally, for better \"soundness\", the Scala type system defines a real type to represent [Null](http://www.scala-lang.org/api/current/#scala.Null) and [Nothing](http://www.scala-lang.org/api/current/#scala.Nothing). By defining `Null` to be the subtype of all reference types `AnyRefs` (but not `AnyVals`), it supports at the type level the (unfortunate) practice of using `null` for a reference value.\n",
+    "Finalement, pour plus de \"solidité\", le système de type Scala définit un type réel qui représente [Null](http://www.scala-lang.org/api/current/#scala.Null) et [Nothing](http://www.scala-lang.org/api/current/#scala.Nothing). En définissant `Null` comme étant le sous-type de tous les types de références `AnyRefs` (mais non pas `AnyVals`), Scala supporte au niveau du typage la pratique regrettable d'utiliser `null` pour une valeur de référence.\n",
     "\n",
-    "However, `null` is not allowed for an `AnyVal`, so the true \"bottom type\" of the hierarchy is `Nothing`. Why is that useful. I'll explain in the next section."
+    "Cependant, `null` n'est pas autorisé pour un `AnyVal`, donc le vrai \"type au fond\" de la hiérarchie est `Nothing`. Nous allons expliquer l'utilité de cela dans la prochaine section."
    ]
   },
   {
